-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.10.0 Alpha
-
38db7b1464d098311e7fea3bfb7d4416496823d2
There is an ABI break in Qt 5.10 pre-alpha. It's caused by this commit: 4de40514066e7e31fe02c87afaf0863d6928391f
Here's a fix for it: https://codereview.qt-project.org/#/c/202511/
However, the ultimate question is why it wasn't caught in the BIC tests...
For Gerrit Dashboard: QTBUG-62516 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
202511,3 | Fix an ABI break caused by too-aggressive deprecation | dev | qt/qtbase | Status: MERGED | +2 | 0 |