Fix an ABI break caused by too-aggressive deprecation

Task-number: QTBUG-62516
Change-Id: Ia3b36cddae982cc6fb9f857505be6e38bc8aaa64
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>