src/gui/image/qpicture.cpp
@@ -1194,7 +1194,7 @@ QT_BEGIN_INCLUDE_NAMESPACE
 #include "qpictureformatplugin.h"
 QT_END_INCLUDE_NAMESPACE
 
-#if QT_DEPRECATED_SINCE(5, 0)
+#if QT_DEPRECATED_SINCE(5, 10)
 /*!
     \obsolete
 
@@ -1280,7 +1280,7 @@ QList<QByteArray> QPicture::outputFormats()
 {
     return QPictureIO::outputFormats();
 }
-#endif // QT_DEPRECATED_SINCE(5, 0)
+#endif // QT_DEPRECATED_SINCE(5, 10)
 
 /*****************************************************************************
   QPictureIO member functions
